# CrewAI-Vision

./: README.md  analyzed.txt  diagram.mmd  verification.txt
Non-Ollama/claude/: .gitignore  README.md  analyzed.txt  diagram.mmd  pyproject.toml
Non-Ollama/claude/knowledge/: user_preference.txt
Non-Ollama/claude/src/afvision/: crew.py  main.py
Non-Ollama/claude/src/afvision/config/: agents.yaml  tasks.yaml
Non-Ollama/claude/src/afvision/tools/: custom_tool.py
Non-Ollama/claude/src/gui/: streamlit_app.py
Ollama(in-progress)/: analyzed.txt  pyproject.toml
Ollama(in-progress)/src/crewai_vision_tool/: crew.py
Ollama(in-progress)/src/crewai_vision_tool/config/: agents.yaml
Ollama(in-progress)/src/gui/: streamlit_app.py
src/crewai_vision_tool/: crew.py  main.py
src/crewai_vision_tool/config/: agents.yaml  tasks.yaml
src/crewai_vision_tool/tools/: OllamaLLavaTool.py
src/gui/: requirements.txt
