[project]
name = "afvision"
version = "0.1.0"
description = "AFVision using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
afvision = "afvision.main:run"
run_crew = "afvision.main:run"
train = "afvision.main:train"
replay = "afvision.main:replay"
test = "afvision.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
